# faqbot

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ghcr.yaml
faqbot/: main.py
