[tool.poetry]
name = "faqbot"
version = "0.1.0"
description = ""
authors = ["Mark Pashmfouroush <mark@markpash.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = "^21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
